--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "leaflet": "^1.9.4",
     "vue": "^3.5.10",
     "vue-router": "^4.5.0"
   },
