configurar worker para deploy na Cloudflare Pages

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,8 @@
 name = "project-destack"
+type = "javascript"
+usage_model = "bundled"
 compatibility_date = "2025-03-31"
+main = "workers-site/index.js"
 
 [site]
 bucket = "./dist"
