--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudflare/kv-asset-handler": "^0.4.0",
     "@supabase/supabase-js": "^2.39.7",
     "leaflet": "^1.9.4",
     "vue": "^3.5.10",
